--- a/src/content/config/navigation.mdx
+++ b/src/content/config/navigation.mdx
@@ -27,6 +27,10 @@ footer_menus:
         href: /blog
       - label: Pricing
         href: /pricing
+  - label: third
+    links:
+      - label: google
+        href: https://google.com
 legal_menu:
   - label: Cookies
     href: "#"
