--- a/src/content/project/crafting-the-perfect-cosmic-mojito.mdx
+++ b/src/content/project/crafting-the-perfect-cosmic-mojito.mdx
@@ -3,7 +3,7 @@ tag:
   - Portraits
 title: Crafting the Perfect Cosmic Mojito
 description: A Flavorful Journey Beyond the Stars
-intro: A Flavorful Journey Beyond the Stars
+intro: this is the best INTRO
 features:
   - name: State
     value: Perfection
